--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
+.App-login {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 999;
+}
+
+.app-header {
+  font-size: calc(10px + 1vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+  border: 1px solid #fff;
+  padding: 4em;
+  background-color: #fff;
+  border-radius: .8em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1em;
+}
+
+.input-label {
+  margin-bottom: .3em;
+  font-weight: bold;
+  font-size: .8em;
+}
+
+.input {
+  font-size: 1.1em;
+  padding: .3em;
+  border-radius: .4em;
+  border: 1px solid #282c34;
+}
+
+.submit-button {
+  padding: .6em 4em;
+  font-size: 1em;
+  border-radius: .8em;
+  border: 2px solid #282c34;
+  margin-top: 1.4em;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.submit-button:hover {
+  background-color: #282c34;
+  color: #fff;
+}
+
+.submit-button:disabled {
+  background-color: #808080;
+  color: #000;
+  border: 2px solid transparent;
+  opacity: .5;
+  cursor: default;
+}
+
+.register-info {
+  color: #fff;
+}
+.register-link {
+  font-weight: bold;
+  color: #97dffb;
+  margin-left: .4em;
 }
